# swjtu-scores-monitor

./: README.md  build.sh  config.py  ocrtt.py  pyproject.toml  requirements.txt  requirementss.txt  vercel.json
.github/workflows/: main.yml  monitor.yml  test_connectivity.yml
actions/: index.py
api/: index.py
scraper/: database.py  fetcher.py
test/: score.py
utils/: database.py  fetcher.py
